Fixed some layout issues.

--- a/BrianChristyWedding/Content/Site.css
+++ b/BrianChristyWedding/Content/Site.css
@@ -22,3 +22,9 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.sidebar {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    background-color: aliceblue;
+}
